[package]
name = "edgelinkd"
version = "0.1.0"
authors = ["Li Wei <oldrev@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true


[dependencies]
edgelink = { path = "./edgelink" }
async-trait = "0.1.73"
libloading = "0.5.2"
more-di = "2.1.2"
tokio = "1.33.0"
log = "0.4.20"

[dev-dependencies]
serde_json_path = "0.6.3"


[workspace]
members = [
    #"./plugins/plugin_a",
    #"./plugins/plugin_b"
]
