[package]
name = "edgelinkd"
version = "0.1.0"
authors = ["Li Wei <oldrev@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.


[dependencies]
edgelink = { path = "./edgelink" }
async-trait = "0.1.73"
libloading = "0.8.5"
more-di = { version = "3.1.0", features = ["builder", "inject", "async", "lazy"] }
tokio = "1.33.0"
log = "0.4.20"
tokio-util = "0.7.9"
log4rs = { version = "1.2.0", features = ["default", "toml_format"] }
jsonata-rs = "0.1.5"
bumpalo = "3.16.0"
clap = "4.5.16"
dirs-next = "2.0.0"

[dev-dependencies]
serde_json_path = "0.6.3"


[workspace]
members = [
    "./edgelink",
    "./plugins/edgelink_red_sqlite_node",
    "./plugins/plugin_b"
]
