[package]
name = "edgelink"
version = "0.1.0"
authors = ["Li Wei <oldrev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true


[dependencies]
edgelink_abstractions = { path = "../abstractions" }
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.73"
ciborium = "0.2.1"
log = "0.4.20"
inventory = "0.3.12"
serde_json = "1.0.107"
serde = "1.0.188"
anyhow = "1.0.75"
more-di = "2.1.2"
topo_sort = "0.4.0"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }