[package]
name = "edgelink"
version = "0.1.0"
authors = ["Li Wei <oldrev@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.73"
log = "0.4.20"
inventory = "0.3.12"
serde =  { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
more-di = { version = "3.1.0", features = ["builder", "inject", "async", "lazy"] }
thiserror = "1.0.49"
tokio-util = "0.7.9"
lazy_static = "1.4.0"
nom = "7.1.3"
smallvec = "1.11.1"
regex = "1.10.2"
bumpalo = "3.16.0"
tokio-cron-scheduler = "0.11.0"
topological-sort = "0.2.2"
chrono = "0.4.38"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

