[package]
name = "edgelink-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Li Wei <oldrev@gmail.com>"]

[lib]
name = "edgelink_core"

[dependencies]
anyhow.workspace = true
jsonschema="0.23.0"
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "net",
    "sync",
    "io-util",
    "io-std",
] }
config.workspace = true
async-trait.workspace = true
log.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
nom.workspace = true
bumpalo.workspace = true
regex.workspace = true
tokio-cron-scheduler.workspace = true
chrono.workspace = true
semver.workspace = true
rquickjs = { optional = true, workspace = true }
rquickjs-extra = { optional = true, workspace = true }
#llrt_modules = { optional = true, workspace = true }
rand.workspace = true
base64.workspace = true
# Serialization stuff
bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bincode.workspace = true
# Crates in this project
edgelink-macro = { path = "../macro" }
dashmap.workspace = true
itertools.workspace = true
smallvec.workspace = true
smallstr.workspace = true
inventory.workspace = true
serde_yaml.workspace = true
arrayvec = { workspace = true, features = ["std", "serde"] }


[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { workspace = true, features = ["test-util"] }
log4rs.workspace = true
ctor.workspace = true


[features]
default = ["core", "js", "net"]
core = []
pymod = []
#js = ["rquickjs", "rquickjs-extra", "llrt_modules"]
js = ["rquickjs", "rquickjs-extra"]
rqjs_bindgen = ["rquickjs/bindgen"]
net = ["nodes_mqtt", "nodes_udp"]
nodes_mqtt = []
nodes_http = ["tokio/net"]
nodes_tcp = ["tokio/net"]
nodes_udp = ["tokio/net"]
nodes_websocket = []
