[package]
name = "edgelink_abstractions"
version = "0.1.0"
authors = ["Li Wei <oldrev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true


[dependencies]
async-trait = "0.1.73"
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = "1.33.0"
