[package]
name = "edgelink"
version = "0.1.0"
authors = ["Li Wei <oldrev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib"]

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true


[dependencies]
edgelink_abstractions = { path = "../abstractions" }
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.73"
ciborium = "0.2.1"
log = "0.4.20"
